<resources>
    <string name="app_name">WMWM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="error_missing_permissions">Cannot start without required permissions</string>


    <string name="status_disconnected">Disconnected</string>
    <string name="status_searching">Searching</string>
    <string name="status_connected">Connected</string>


    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="history_btn_text" translatable="false">SHOW HISTORY</string>
    <string name="btn_annotation_mock" translatable="false">total 15 times you met</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="name_badge" translatable="false">NAME</string>
    <string name="telno1_badge" translatable="false">TELNO</string>
    <string name="email_badge" translatable="false">EMAIL</string>
    <string name="work_type_badge" translatable="false">WORK TYPE</string>
    <string name="residence_badge" translatable="false">RESIDENCE</string>
    <string name="mbti_badge" translatable="false">MBTI</string>
    <string name="major_badge" translatable="false">MAJOR</string>

    <string name="content_email">dlwpdms1@naver.com</string>
    <string name="content_work_type">CEO of Tesla</string>
    <string name="content_residence">California, Western United States</string>
    <string name="content_mbti">INTJ</string>
</resources>